@@ -614,6 +614,7 @@
 	- updated WARNINGS in makefile and added clang-specific ones
 	- removed unnecessary global variable listxml_output
 	- moved get_xpath_nodeset() from mame_regtest.c to common.c/.h
+	- suppress Linux/Unix-related messages in stdout by using SDL dummy drivers for video and audio
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
